--- a/style.css
+++ b/style.css
@@ -19,8 +19,9 @@ body {
 }
 
 .heading{
-    font-size: 30px;
+    font-size: 50px;
     font-weight: 700;
+    font-style: oblique;
 }
 
 .quote{
@@ -32,6 +33,8 @@ body {
     font-size: 25px;
     margin: 10px;
     font-style: italic;
+    text-align: right;
+    margin-right: 50px;
 }
 
 .btn{
@@ -40,15 +43,22 @@ body {
     cursor: pointer;
     padding: 10px;
     margin-top: 15px;
-    background-color: rgba(255, 255, 255, 0.3);
-    border-color: rgba(255, 255, 255, 0.6);
-    text-transform: uppercase;
-    width: 300px;
+    border-color: #ffffff;
+    padding: 0.6em 2.3em;
+    cursor: pointer;
+    font-size: 1em;
+    color: black;
+    background-image: linear-gradient(45deg, transparent 50%, #000000 50%);
+    background-position: 25%;
+    background-size: 400%;
+    -webkit-transition: background 500ms ease-in-out, color 500ms ease-in-out;
+    transition: background 500ms ease-in-out, color 500ms ease-in-out;
 }
 
 .btn:hover{
     background-color: rgba(255, 255, 255, 0.6);
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.6);
     transition: all 300ms ease-in-out;
-    color: black;
+    color: #ffffff;
+  background-position: 100%;
 }
